--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -69,4 +69,20 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+
+  @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+
+  .blinking {
+    animation: blink 0.5s linear infinite;
+  }
 }
